--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="키워드">
-    <meta name="keywords" content="키워드">
-    <meta property="og:url" content="도메인">
-    <meta property="og:title" content="키워드">
-    <meta property="og:description" content="사이트설명">
+    <meta name="description" content="스마트한 공간 설계, 하모와 함께하세요!">
+    <meta name="keywords" content="스터디 예약 플랫폼 - 하모">
+    <meta property="og:url" content="https://himzei.github.io/hamo/">
+    <meta property="og:title" content="스터디 예약 플랫폼 - 하모">
+    <meta property="og:description" content="스마트한 공간 설계, 하모와 함께하세요!">
     <meta property="og:image" content="/images/thumbnail.jpg">
-    <link rel="canonical" href="도메인">
+    <link rel="canonical" href="https://himzei.github.io/hamo/">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/promotion.css">
