--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/article_common.css">
     <link rel="stylesheet" href="css/article1.css">
     <link rel="stylesheet" href="css/article2.css">
+    <link rel="stylesheet" href="css/article2x.css">
     <link rel="stylesheet" href="css/article3.css">
     <link rel="stylesheet" href="css/article4.css">
     <link rel="stylesheet" href="css/article5.css">
@@ -58,7 +59,7 @@
             </label>
             <ul class="gnb-m">
                 <li><a href="#2">업체소개</a></li>
-                <li><a href="#3">특장점</a></li>
+                <li><a href="#3">차별화전략</a></li>
                 <li><a href="#4">입점절차</a></li>
                 <li><a href="#5">서비스후기</a></li>
                 <li><a href="#6">파트너사</a></li>
@@ -67,7 +68,7 @@
             <div class="gnb">
                 <ul>
                     <li><a href="#2">업체소개</a></li>
-                    <li><a href="#3">특장점</a></li>
+                    <li><a href="#3">차별화전략</a></li>
                     <li><a href="#4">입점절차</a></li>
                     <li><a href="#5">서비스후기</a></li>
                     <li><a href="#6">파트너사</a></li>
@@ -231,6 +232,122 @@
                         </div>
                         <div class="a2-box-image" data-aos="fade-left" data-aos-delay="400">
                             <img src="images/a2-4.jpg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="article article2x" id="3">
+            <div class="article-wrapper">
+                <div class="a2x-box-wrapper">
+                    <div class="a2x-box">
+                        <div class="a2x-box-item">
+                            
+                        </div>
+                        <div class="a2x-box-item">
+                            <h1>
+                                3D 공간투어
+                            </h1>
+                        </div>
+                        <div class="a2x-box-item">
+                            <h1>
+                                AI 공간추천
+                            </h1>
+                        </div>
+                        <div class="a2x-box-item">
+                            <h1>
+                                랜딩페이지 제작
+                            </h1>
+                        </div>
+                        <div class="a2x-box-item">
+                            <h1>
+                                예약솔루션
+                            </h1>
+                        </div>
+                        <div class="a2x-box-item">
+                            <h1>
+                                출입문관리
+                            </h1>
+                        </div>
+                    </div>
+                    <div class="a2x-box">
+                        <div class="a2x-box-item">
+                            <img src="images/logo.png">
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-check-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-check-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-check-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-check-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-check-line"></i>
+                        </div>
+                    </div>
+                    <div class="a2x-box">
+                        <div class="a2x-box-item">
+                            <img src="images/sc.png">
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-close-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-check-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-close-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-check-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-close-line"></i>
+                        </div>
+                    </div>
+                    <div class="a2x-box">
+                        <div class="a2x-box-item">
+                            <img src="images/naver.png">
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-close-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-close-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-close-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-check-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-close-line"></i>
+                        </div>
+                    </div>
+                    <div class="a2x-box">
+                        <div class="a2x-box-item">
+                            <img src="images/gosca.png">
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-close-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-close-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-close-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-check-line"></i>
+                        </div>
+                        <div class="a2x-box-item">
+                            <i class="ri-check-line"></i>
                         </div>
                     </div>
                 </div>
