--- a/index.html
+++ b/index.html
@@ -270,24 +270,24 @@
                             </h1>
                         </div>
                     </div>
-                    <div class="a2x-box">
+                    <div class="a2x-box" data-aos="zoom-out" data-aos-delay="500" data-aos-duration="500">
                         <div class="a2x-box-item">
                             <img src="images/logo.png">
                         </div>
                         <div class="a2x-box-item">
-                            <i class="ri-check-line"></i>
+                            <i class="ri-check-line" data-aos="zoom-in" data-aos-delay="800" data-aos-duration="500"></i>
                         </div>
                         <div class="a2x-box-item">
-                            <i class="ri-check-line"></i>
+                            <i class="ri-check-line" data-aos="zoom-in" data-aos-delay="850" data-aos-duration="500"></i>
                         </div>
                         <div class="a2x-box-item">
-                            <i class="ri-check-line"></i>
+                            <i class="ri-check-line" data-aos="zoom-in" data-aos-delay="900" data-aos-duration="500"></i>
                         </div>
                         <div class="a2x-box-item">
-                            <i class="ri-check-line"></i>
+                            <i class="ri-check-line" data-aos="zoom-in" data-aos-delay="950" data-aos-duration="500"></i>
                         </div>
                         <div class="a2x-box-item">
-                            <i class="ri-check-line"></i>
+                            <i class="ri-check-line" data-aos="zoom-in" data-aos-delay="1000" data-aos-duration="500"></i>
                         </div>
                     </div>
                     <div class="a2x-box">
